Remove some content that doesn't actually matter that much

--- a/index.html
+++ b/index.html
@@ -8,13 +8,8 @@
 <body>
   <h1>uwu</h1>
   <p>
-  Hi! My name is Alex. I'm a software engineer in the Bay Area. I currently work
-  on debuggers and tooling around debugging.
-  </p>
-
-  <p>
-  I'm interested in computer science, math, reading comics, playing video games,
-  appreciating mechanical keyboards, and general tinkering.
+  Hi! My name is Alex. I'm a software engineer. I work on mostly debugging and
+  tooling around debugging.
   </p>
 
   <p>
